trying to fix issue with nabar on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@ html {
 
 html, body {
   height: 100%;
+  height: -webkit-fill-available;
 }
 
 * {
